--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "content"]
 	path = content
-	url = https://github.com/lore-corrias/archive.git
+	url = git@github.com:lore-corrias/notes.git
